--- a/top/css/style.css
+++ b/top/css/style.css
@@ -180,8 +180,21 @@ header {
 }
 
 /***************** Nav SP **********************/
-
 .Nav {
+  display: flex;
+  position: fixed;
+  width: 100%;
+  flex-direction: column;
+  transition: all ease-in-out 0.3s;
+  height: 50px;
+  overflow: hidden;
+}
+
+.Nav--active {
+  height: 100%;
+}
+
+.Nav-content {
   background-color: #3c3d41;
   width: 100%;
   height: 50px;
@@ -218,6 +231,7 @@ header {
   width: 100%;
   height: 100%;
   padding: 0 5px;
+  font-size: 16px;
 }
 
 .Nav-search__btn {
@@ -233,4 +247,134 @@ header {
 .Nav-hamburger {
   width: 50px;
   height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.Nav-hamburger-content {
+  position: relative;
+  height: 20px;
+  width: 30px;
+  overflow: hidden;
+}
+
+.Nav-hamburger-content__ico {
+  background-color: #fff;
+  position: absolute;
+  height: 2px;
+  width: 100%;
+  top: 0;
+  right: 0;
+  transition: all ease-in-out 0.25s;
+}
+
+.Nav-hamburger-content__ico:nth-child(2) {
+  top: 8px;
+}
+
+.Nav-hamburger-content__ico:nth-child(3) {
+  top: 16px;
+}
+
+.Nav--active .Nav-hamburger-content__ico:first-child {
+  right: -60px;
+  transform: rotate(-135deg);
+  opacity: 0;
+}
+
+.Nav--active .Nav-hamburger-content__ico:nth-child(2) {
+  top: 8px;
+  transform: rotate(-135deg);
+}
+
+.Nav--active .Nav-hamburger-content__ico:nth-child(3) {
+  top: 8px;
+  transform: rotate(135deg);
+}
+
+.Nav-menu {
+  width: 100%;
+  flex-grow: 1;
+  background-color: rgba(0, 0, 0, 0.4);
+  transition: all ease-in-out 0.3s;
+}
+
+.Nav-menu-content {
+  background-color: #fff;
+}
+
+.Nav-menu-content-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px 5px;
+}
+
+.Nav-menu-content-list-item {
+  width: 24%;
+  text-align: center;
+}
+
+.Nav-menu-content-list-item {
+  margin: 3px 0.5%;
+  background: #fff;
+  border: 1px solid;
+  border-radius: 3px;
+  padding: 5px 0;
+  font-size: 12px;
+}
+
+.Nav-menu-content-footer {
+  display: flex;
+  height: 40px;
+  background-color: #f1f1f1;
+  border-top: 1px solid #3c3d41;
+}
+
+.Nav-menu-content-footer-contact {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-grow: 1;
+}
+
+.Nav-menu-content-footer-contact img {
+  width: 30px;
+  height: 30px;
+}
+
+.Nav-menu-content-footer-contact a {
+  font-size: 18px;
+  color: #e41e21;
+  font-weight: bold;
+  margin-left: 5px;
+}
+
+.Nav-menu-content-footer-location {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-left: 1px solid #ddd;
+}
+
+.Nav-menu-content-footer-location select {
+  margin-left: 5px;
+  border: 1px solid #999;
+  border-radius: 3px;
+}
+
+@media screen and (max-width: 425px) {
+  .Nav-menu-content-list-item {
+    width: 32.33%;
+    text-align: center;
+    font-size: 13px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .Nav-menu-content-list-item {
+    width: 48%;
+    text-align: center;
+    font-size: 14px;
+  }
 }
