--- a/top/css/style.css
+++ b/top/css/style.css
@@ -77,6 +77,7 @@ header {
   width: 110px;
   overflow: hidden;
   display: none;
+  z-index: 1;
 }
 
 .Menu-branch-search-loaction--active .Menu-branch-search-loaction-select {
@@ -131,6 +132,10 @@ header {
 .Menu-list-item-content {
   height: 100%;
   padding: 0 3px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .Menu-list-item-content:hover {
@@ -397,9 +402,9 @@ header {
   flex: 0 0 68%;
 }
 
-.Carousel-content {
+/* .Carousel-content {
   background: #e41e21;
-}
+} */
 
 .Carousel-nav {
   display: flex;
@@ -413,6 +418,8 @@ header {
   justify-content: center;
   width: 100%;
   border-right: 1px solid #ddd;
+  cursor: pointer;
+  font-size: 14px;
 }
 
 .Carousel-nav-item:last-child {
@@ -455,3 +462,48 @@ header {
     flex-direction: row;
   }
 }
+
+/************* Carousel ******************/
+
+.Carousel-content {
+  overflow: hidden;
+  position: relative;
+}
+
+.Carousel-content-list {
+  display: flex;
+  position: relative;
+}
+
+.Carousel-content-item {
+  min-width: 100%;
+}
+
+.Carousel-content__btn {
+  position: absolute;
+  top: 50%;
+  padding: 0 10px;
+  font-size: 40px;
+  transform: translateY(-50%);
+}
+
+.Carousel-content__btn--right {
+  right: 0;
+}
+
+.Carousel-nav-item--active .Carousel-nav-item__txt {
+  color: #fff;
+}
+
+.Carousel-nav-item--active {
+  background-color: #e11b1e;
+}
+
+.Carousel-nav-item:hover {
+  background-color: #ddd;
+}
+
+.Carousel-nav-item--active:hover {
+  background-color: #e11b1e;
+}
+
